--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ footer a:hover {
 
 .about-text {
   flex: 1 1 250px;
+  text-align: justify;
 }
 
 .about-text h2 {
@@ -205,6 +206,7 @@ footer a:hover {
     height: 200px;
   }
 }
+
 
 
 
