--- a/style.css
+++ b/style.css
@@ -189,8 +189,7 @@ footer a:hover {
   display: block;
 }
 
-.about-text {
-  flex: 1 1 250px;
+.about-text p {
   text-align: justify;
 }
 
@@ -206,6 +205,7 @@ footer a:hover {
     height: 200px;
   }
 }
+
 
 
 
